# pico_w_c_sdk_template_internet_to_iot

./: .gitignore  CMakeLists.txt  README.md  config.cpp  internet.cpp  pinouts.md
communication/: data.cpp
core0/: main0.cpp  modules.cpp  modules_rutine.cpp
core0/libs/BMP280/: BMP280_i2c.cpp  BMP280_spi.cpp
core0/libs/build_in/BMP280/: BMP280_i2c.cpp
core0/libs/build_in/display/: display.cpp
core0/libs/build_in/pzem/: pzem.cpp
core0/libs/dht20/: dht20.cpp
core0/libs/display/ds18b20 lib test/: CMakeLists.txt  niebieski 1 supły.txt
core0/libs/ds18b20 lib test/: main.cpp
core0/user_modules/: modules.cpp
core1/: main1.cpp
core1/internet/: connection.cpp  incoming.cpp  request.cpp  secret_copy.cpp
core1/internet/incoming/: get_param_processing.cpp  get_param_processing_user.cpp
core1/internet/requests/: bootAck.cpp  getTime.cpp  ping.cpp  report.cpp
core1/request copies/: not working  working
user/: data.cpp
user/core0/libs/build_in/BMP280/: BMP280_i2c.cpp
user/core0/libs/build_in/dht20/: dht20.cpp
user/core0/libs/build_in/display/: display.cpp
user/core0/libs/build_in/pzem/: pzem.cpp
user/core0/modules/: modules.cpp  modules_rutine.cpp
user/core0/modules/build_in/: modules.cpp  modules_rutine.cpp
user/core1/: report.cpp
